tests/compile_fail/invalid_font_feature_settings_empty_literal.rs
use surgeist_style::FontFeatureSettings;

fn main() {
    let _settings = FontFeatureSettings::Features(Vec::new());
}
